unpackaged/main/default/objects/Lead/fields/Additional_Interest__c.field-meta.xml
<CustomField>
    <fullName>Additional_Interest__c</fullName>
    <label>Additional Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Leasing</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Manpower</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>Rental -B2B</fullName>
            </value>
            <value>
                <fullName>Chauffeur &amp; Limousine  -B2B</fullName>
            </value>
            <value>
                <fullName>ETDI - B2B  ( Driving School )</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>