unpackaged/main/default/objects/Lead/fields/Auction_Fees__c.field-meta.xml
<CustomField>
    <fullName>Auction_Fees__c</fullName>
    <label>Auction Fees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Heavy Vehicle AED 1000</fullName>
            </value>
            <value>
                <fullName>Light Vehicle AED 500</fullName>
            </value>
            <value>
                <fullName>No Fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>