unpackaged/main/default/objects/Lead/fields/Bank_Address__c.field-meta.xml
<CustomField>
    <fullName>Bank_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>