unpackaged/main/default/objects/Lead/fields/Body_Polishing__c.field-meta.xml
<CustomField>
    <fullName>Body_Polishing__c</fullName>
    <label>Body Polishing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>