unpackaged/main/default/objects/Lead/fields/Campaign_Description__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Campaign Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>