unpackaged/main/default/objects/Lead/fields/contactMethod__c.field-meta.xml
<CustomField>
    <fullName>contactMethod__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Method</label>
    <length>250</length>
    <type>Text</type>
</CustomField>