unpackaged/main/default/objects/Lead/fields/Contract_Days__c.field-meta.xml
<CustomField>
    <fullName>Contract_Days__c</fullName>
    <label>Contract Days</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>No_of_Days</valueSetName>
    </valueSet>
</CustomField>