unpackaged/main/default/objects/Lead/fields/Contract_Months__c.field-meta.xml
<CustomField>
    <fullName>Contract_Months__c</fullName>
    <label>Contract Months</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ETSales_No_of_Months</valueSetName>
    </valueSet>
</CustomField>