unpackaged/main/default/objects/Lead/fields/Customer_Category_Importance__c.field-meta.xml
<CustomField>
    <fullName>Customer_Category_Importance__c</fullName>
    <label>Customer Category Importance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Government Entity</fullName>
            </value>
            <value>
                <fullName>Existing ET Customer</fullName>
            </value>
            <value>
                <fullName>Fleet Owner</fullName>
            </value>
            <value>
                <fullName>High Sales Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>