unpackaged/main/default/objects/Lead/fields/Description_for_Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Description_for_Service_Request__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description for Service Request</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>