unpackaged/main/default/objects/Lead/fields/Direct_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Direct_Purchase_Price__c</fullName>
    <label>Customer Price Expectation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>