unpackaged/main/default/objects/Lead/fields/Direct_Purchase_Vehicle_Chassis_Number__c.field-meta.xml
<CustomField>
    <fullName>Direct_Purchase_Vehicle_Chassis_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Chassis Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>