unpackaged/main/default/objects/Lead/fields/Direct_Purchase_Vehicle_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Direct_Purchase_Vehicle_Mileage__c</fullName>
    <label>Direct Purchase Vehicle Mileage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>