unpackaged/main/default/objects/Lead/fields/Duplicate_Lead__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark it as Duplicate lead when it matches  - Existing Account or  Contact.</description>
    <label>Duplicate Lead</label>
    <type>Checkbox</type>
</CustomField>