unpackaged/main/default/objects/Lead/fields/EM_Campaign__c.field-meta.xml
<CustomField>
    <fullName>EM_Campaign__c</fullName>
    <label>EM Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>313.95</fullName>
            </value>
            <value>
                <fullName>508507077</fullName>
            </value>
            <value>
                <fullName>580</fullName>
            </value>
            <value>
                <fullName>Buy 2 get 2Tires for free Campaign</fullName>
            </value>
            <value>
                <fullName>Buy 2 get 2Tires for free Campaign,Oil &amp; Filter Change @AED 199 Campaign</fullName>
            </value>
            <value>
                <fullName>code</fullName>
            </value>
            <value>
                <fullName>EM.BP.Q4.21</fullName>
            </value>
            <value>
                <fullName>EM.BP.Q4.21 EM.TS.Q4.21 </fullName>
            </value>
            <value>
                <fullName>EM.EW.Q1.22</fullName>
            </value>
            <value>
                <fullName>EM.R.CC.2022</fullName>
            </value>
            <value>
                <fullName>EM.R.OC.2022</fullName>
            </value>
            <value>
                <fullName>EM.R.PRW.2022</fullName>
            </value>
            <value>
                <fullName>EM.R.PRW.2022 \\\\ EM.EW.Q1.22</fullName>
            </value>
            <value>
                <fullName>EM.TS.Q4.21</fullName>
            </value>
            <value>
                <fullName>EM.TS.Q4.21 is Tire Services</fullName>
            </value>
            <value>
                <fullName>ETmoto</fullName>
            </value>
            <value>
                <fullName>JTHBK1GG4H2254871</fullName>
            </value>
            <value>
                <fullName>Luxury Vehicles Maintenance unit</fullName>
            </value>
            <value>
                <fullName>Oil &amp; Filter Change @AED 199 Campaign</fullName>
            </value>
            <value>
                <fullName>Oil and oil filter offer EM.R.OC.2022</fullName>
            </value>
            <value>
                <fullName>Oil and oil filter offer EM.R.OC.2022 and more services</fullName>
            </value>
            <value>
                <fullName>Tire Campaign</fullName>
            </value>
            <value>
                <fullName>Oil Exchange Campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>