unpackaged/main/default/objects/Lead/fields/EmailCustom__c.field-meta.xml
<CustomField>
    <fullName>EmailCustom__c</fullName>
    <formula>Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EmailCustom</label>
    <type>Text</type>
</CustomField>