unpackaged/main/default/objects/Lead/fields/Emirates_Moto_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Emirates_Moto_Campaign__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Emirates Moto Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>