unpackaged/main/default/objects/Lead/fields/ET_Lead_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>ET_Lead_Approval_Status__c</fullName>
    <description>This field is to add approval flow of lead</description>
    <label>Lead Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approve</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>