unpackaged/main/default/objects/Lead/fields/ETM_Driving_Licence__c.field-meta.xml
<CustomField>
    <fullName>ETM_Driving_Licence__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Driving License</label>
    <length>255</length>
    <type>Text</type>
</CustomField>