unpackaged/main/default/objects/Lead/fields/ETM_Exchange_Model__c.field-meta.xml
<CustomField>
    <fullName>ETM_Exchange_Model__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exchange Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>