unpackaged/main/default/objects/Lead/fields/ETM_Insurance__c.field-meta.xml
<CustomField>
    <fullName>ETM_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance</label>
    <type>Checkbox</type>
</CustomField>