unpackaged/main/default/objects/Lead/fields/ETM_Medium__c.field-meta.xml
<CustomField>
    <fullName>ETM_Medium__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UTM Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>