unpackaged/main/default/objects/Lead/fields/ETSALES_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Approval_Status__c</fullName>
    <description>To Track the Lead approval Status . Can Check this Value at time of Lead Conversion. If Lead is not Approved, It&#39;s not eligible for conversion.</description>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>