unpackaged/main/default/objects/Lead/fields/ETSALES_Country_Code_Company__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Country_Code_Company__c</fullName>
    <label>Ph Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ISD_Country_Code</valueSetName>
    </valueSet>
</CustomField>