unpackaged/main/default/objects/Lead/fields/ETSALES_Lead_Created__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Lead_Created__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Lead Created</label>
    <type>Checkbox</type>
</CustomField>