unpackaged/main/default/objects/Lead/fields/ETSALES_Lead_Number__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Lead_Number__c</fullName>
    <displayFormat>Lead# {00000000}</displayFormat>
    <label>Prospect Number</label>
    <type>AutoNumber</type>
</CustomField>