unpackaged/main/default/objects/Lead/fields/ETSALES_Lead_State__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Lead_State__c</fullName>
    <label>Prospect State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Budget Constraint</fullName>
            </value>
            <value>
                <fullName>Do Not Call (DNC)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>