unpackaged/main/default/objects/Lead/fields/ETSALES_Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Lead_Type__c</fullName>
    <label>Prospect Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Prospect_Type</valueSetName>
    </valueSet>
</CustomField>