unpackaged/main/default/objects/Lead/fields/ETSALES_Leasing_Term__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Leasing_Term__c</fullName>
    <label>Contract Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>