unpackaged/main/default/objects/Lead/fields/ETSALES_Other_Industry__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Other_Industry__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Specify Other Industry Name when select Industry is Other</inlineHelpText>
    <label>Other Industry</label>
    <length>100</length>
    <type>Text</type>
</CustomField>