unpackaged/main/default/objects/Lead/fields/ETSALES_TaxRegistrationNo__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_TaxRegistrationNo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tax Registration No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>