unpackaged/main/default/objects/Lead/fields/ETSALES_ZoneNew__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_ZoneNew__c</fullName>
    <description>This is used for Record Sharing and Visibility</description>
    <label>ZoneTEXT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ETSALES_Zones</valueSetName>
    </valueSet>
</CustomField>