unpackaged/main/default/objects/Lead/fields/ETT_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>ETT_Account_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>