unpackaged/main/default/objects/Lead/fields/ETT_Approve_Reject_Comments__c.field-meta.xml
<CustomField>
    <fullName>ETT_Approve_Reject_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approve/Reject Comments</label>
    <type>TextArea</type>
</CustomField>