unpackaged/main/default/objects/Lead/fields/ETT_Chamber_of_Comm_Cert_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>ETT_Chamber_of_Comm_Cert_Expiry_Date__c</fullName>
    <description>Customer chamber of commerce certificate expiry date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Chamber of Comm. Cert Expiry Date</label>
    <type>Date</type>
</CustomField>