unpackaged/main/default/objects/Lead/fields/ETT_Chamber_of_Commerce_Certification_No__c.field-meta.xml
<CustomField>
    <fullName>ETT_Chamber_of_Commerce_Certification_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Chamber of Commerce Certification No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>